[package]
name = "dump_qcow"
version = "0.1.0"
edition = "2021"
authors = ["Frankie Fisher"]
description = "A tool to examine qcow3 format files from kvm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
byteorder = "1.4.3"
clap = { version = "4.1.1", features = ["derive"] }
